CNNのための準備を整えました、特徴量マップが32というのは受け入れるしかないんか、、、？

--- a/ML15.ipynb
+++ b/ML15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOVkFwNfaFrrw/xJPSRx87",
+      "authorship_tag": "ABX9TyPGct7zvpez+Hs3ioYDA+YU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w3iihgDBqMy4",
-        "outputId": "a23b5d8d-483e-4301-9839-409dd9f3c4b4"
+        "outputId": "37ac76cd-4b3d-4501-d51f-ed71967ead08"
       },
       "outputs": [
         {
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dahj69V_qQ49",
-        "outputId": "4c303cd4-12ce-4088-905a-3e8eb647c898"
+        "outputId": "ef6a3995-bd9a-449b-c61d-42ab62660b1d"
       },
       "execution_count": 2,
       "outputs": [
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qfA06P5ZeFTJ",
-        "outputId": "6e3dedc9-966e-40c9-d722-d019030c0f4d"
+        "outputId": "6b081c5d-7df9-42d3-cd84-f3d75d887151"
       },
       "execution_count": 3,
       "outputs": [
@@ -158,9 +158,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fpN5DeK2rrzN",
-        "outputId": "3e05bb36-cdfa-4073-acf8-dd2e600ae9bf"
+        "outputId": "607df692-52fe-48e7-a1b0-a620f209e65b"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8USVy4sBr8g7",
-        "outputId": "151bf5cd-b651-4812-b0b5-932fa215cc9a"
+        "outputId": "c84aec51-8489-4af6-cc7e-c6170d800436"
       },
       "execution_count": 5,
       "outputs": [
@@ -204,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n_5VxbrfsBmJ",
-        "outputId": "526c935e-63f0-46cc-c2c1-1f6a32068044"
+        "outputId": "4358bc51-d299-4c9a-f17d-cd22c5dce877"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,9 +234,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sEBC2HcgsIya",
-        "outputId": "e01e3ffd-d096-4b2d-97b2-02ed185c7fa4"
+        "outputId": "f9912fcf-ac35-4813-b3b9-706ad2ab63d8"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,9 +259,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1CXUGR6UsZyB",
-        "outputId": "17575c7e-2047-4462-f316-e3daa6359860"
+        "outputId": "980f75c7-34e0-451e-9750-1a035c7ba598"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,14 +286,150 @@
       "metadata": {
         "id": "bVyQuQJaseZG"
       },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bce_probas = tf.keras.losses.BinaryCrossentropy(from_logits=False)\n",
+        "bce_logits = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
+        "\n",
+        "logits = tf.constant([0.8])\n",
+        "probas = tf.keras.activations.sigmoid(logits)\n",
+        "tf.print('BCE (w probas): {:.4f}'.format(bce_probas(y_true=[1], y_pred=probas)), '(w Logits): {:.4f}'.format(bce_logits(y_true=[1], y_pred=logits)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jI6qtKjfu3WI",
+        "outputId": "42300b56-5767-4d38-acad-76cb229cb873"
+      },
       "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BCE (w probas): 0.3711 (w Logits): 0.3711\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cce_probas = tf.keras.losses.CategoricalCrossentropy(from_logits=False)\n",
+        "cce_logits = tf.keras.losses.CategoricalCrossentropy(from_logits=True)\n",
+        "logits = tf.constant([[1.5, 0.8, 2.1]])\n",
+        "probas = tf.keras.activations.softmax(logits)\n",
+        "tf.print(\n",
+        "    'CCE (w probas): {:.4f}'.format(cce_probas(y_true=[[0,0,1]], y_pred=probas)),\n",
+        "    '(w logits): {:.4f}'.format(cce_logits(y_true=[[0,0,1]], y_pred=logits))\n",
+        ")                                                    "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DF157n51gUPt",
+        "outputId": "89a9ba08-95db-4905-e57b-52831a3c7588"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CCE (w probas): 0.5996 (w logits): 0.5996\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sp_cce_probas = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False)\n",
+        "sp_cce_logits = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+        "\n",
+        "tf.print(\n",
+        "    'Sparse CCE (w Probas): {:.4f}'.format(sp_cce_probas(y_true=[2], y_pred=probas)),\n",
+        "    '(w logits): {:.4f}'.format(sp_cce_logits(y_true=[2], y_pred=logits))\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5OcZP4zkhJkD",
+        "outputId": "35f4c0f5-008e-463d-e270-51dab2be81f8"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sparse CCE (w Probas): 0.5996 (w logits): 0.5996\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow_datasets as tfds\n",
+        "mnist_bldr = tfds.builder('mnist')\n",
+        "mnist_bldr.download_and_prepare()\n",
+        "datasets = mnist_bldr.as_dataset(shuffle_files=False)\n",
+        "mnist_train_orig = datasets['train']\n",
+        "mnist_test_orig = datasets['test']"
+      ],
+      "metadata": {
+        "id": "gXbzgcxbhqie"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "BUFFER_SIZE = 10000\n",
+        "BATCH_SIZE = 64\n",
+        "NUM_EPOCHS = 20\n",
+        "mnist_train = mnist_train_orig.map(\n",
+        "    lambda item: (tf.cast(item['image'], tf.float32)/ 255.0, tf.cast(item['label'], tf.int32))\n",
+        ")\n",
+        "mnist_test = mnist_test_orig.map(\n",
+        "    lambda item: (tf.cast(item['image'], tf.float32)/ 255.0, tf.cast(item['label'], tf.int32))\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "Fh-4h5KrjNx5"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.random.set_seed(1)\n",
+        "mnist_train = mnist_train.shuffle(buffer_size=BUFFER_SIZE, reshuffle_each_iteration=False)\n",
+        "mnist_valid = mnist_train.take(10000).batch(BATCH_SIZE)\n",
+        "mnist_train = mnist_train.skip(10000).batch(BATCH_SIZE)"
+      ],
+      "metadata": {
+        "id": "TM3_Qil-j-yI"
+      },
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jI6qtKjfu3WI"
+        "id": "qVCjzruZkwbK"
       },
       "execution_count": null,
       "outputs": []
